
 - added: 



############################################################################################





Version 1.5
	- Version 1.5.0

Developer Version
	- 1.0.1 Development
	- 1.0.2 Development
	- 1.0.3 Development
	- 1.0.4 Development
	- 1.0.5 Development
	- 1.0.6 Development
	- 1.0.7 Development
	- 1.5.0 Stable
	- 1.5.1 Stable
	- 1.5.2 Stable
	- 1.5.3 Stable
	- 1.5.4 Stable

Building Steps: 2714



 Version 1.5.4 Stable
-----------------------------------------------------------------

 - bug #0000122: 

 - security fixed: 

 - bug fixed: tree view for the webpage tree (backend)

 - changed: 

 - added: 




 Version 1.5.3 Stable
-----------------------------------------------------------------

 - bug #0000122: 

 - security fixed: 

 - bug fixed: seo with : now with the lang var
 - bug fixed: language setting for the frontpage is wrong
 - bug fixed: html entitie encode is wrong (now with another
              decrypotion if php is 5.2.0 or newer)
 - bug fixed: bug on chaniging contact person with another language as the default

 - changed: the language selector in the global settings are now without language code
 - changed:

 - added: 




 Version 1.5.2 Stable
-----------------------------------------------------------------

 - bug #0000122: 

 - security fixed: 

 - bug fixed: newsmanager now with save button

 - changed: 

 - added: 




 Version 1.5.1 Stable
-----------------------------------------------------------------

 - bug #0000122: 

 - security fixed: 

 - bug fixed: update bug fixed

 - changed: 

 - added: 




 Version 1.5.0 Stable
-----------------------------------------------------------------

 - bug #0000122: login on frontpage
 - bug #0000125: .xml error after installation
 - bug #0000105: cross-site scripting security bug
 - bug #0000140: feeds with special chars
 - bug #0000138: feature: regenerate feeds on saving new news
 - bug #0000116: newsletter emails in html
 - bug #0000129: editing topmenu internet links